# cppsocket

./: .editorconfig  CMakeLists.txt  README.md
container/: Dockerfile
include/: cppsocket.hpp  expected.hpp
src/: cppsocket.cpp
tests/: CMakeLists.txt  main.cpp
